Revision history for {{$dist->name}}

{{$NEXT}}

0.28_04   2017-06-10 13:35:10 -0400
  - Update alienfile to remove deprecation

0.28_03   2017-06-10 06:36:13 -0400
  - Build dynamic libraries separately

0.28_02   2017-03-30 18:07:43 -0400
  - Use Alien::Libxml2 to find libxml2

0.28_01   2017-03-30 14:03:41 -0400
  - Add legacy Alien::Libarchive compat layer

0.28      2017-03-30 14:01:20 -0400
  - initial version