@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Drop support for _macro on non-linux
 
 0.28_04   2017-06-10 13:35:10 -0400
   - Update alienfile to remove deprecation
